libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/LUSEPDA.NSN
DEFINE DATA
LOCAL USING MYPDA
END-DEFINE

END
